--- a/app/templates/gimage.html
+++ b/app/templates/gimage.html
@@ -20,9 +20,15 @@
                 </form>
                 <button onclick="search()">Search</button>
             </div>
-    
+            <div class="form-control" style="width:200px;margin-top: 0;">
+                <form action="">
+                    <input type="text"  id="howmany" placeholder="number of images to load">
+                </form>
+            </div>
+                
         </div>
         <header id="img-cont">
+                
         </header>
         <div class="load-more">
             <button onclick="getlink()">
