--- a/app/static/css/gimage.css
+++ b/app/static/css/gimage.css
@@ -3,7 +3,7 @@ body{
     font-family: Roboto,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,
     "Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol",
     "Noto Color Emoji";
-    background: #0b0b0b;
+    background: white;
 }
 .upper{
     display: flex;
@@ -36,12 +36,12 @@ body{
     border: none;
     border-bottom: 2px solid salmon;
     background-color: transparent;
-    color: white;
+    color: bla;
 }
 ::placeholder 
 {
     opacity: 0.8;
-    color: white;
+    color: black;
 }
 .main{
     display: flex;
@@ -66,6 +66,7 @@ header{
     width: 300px;
     margin: 0.4vw 0.1vw;
     flex-direction: column;
+    
 }
 .info{
     display: flex;
@@ -74,11 +75,13 @@ header{
     text-align: center;
     align-items: center;
     padding: 0 1rem;
+    margin-top: 0.2rem;
+    border: 2px solid black;
 }
 
 .info p{
     font-size: 1rem;
-    color: white;
+    color: black;
 }
 .info button{
     margin:0;
@@ -87,7 +90,7 @@ header{
     background-color: transparent !important;
 }
 svg{
-    fill: white;
+    fill: black;
 }
 svg:hover{
     cursor: pointer;
@@ -97,6 +100,8 @@ svg:hover{
 header div img{
     width: 100%;
     height: auto;
+    box-shadow: 0 1px 20px 3px rgba(60,64,67,0.3), 0 2px 6px 2px rgba(60,64,67,0.15);
+    
 }
 
 .load-more{
@@ -110,7 +115,7 @@ header div img{
 {
     font-size: 20px;
     box-sizing: border-box;
-    color: white;
+    color: black;
     padding: 4px 6px;
     background-color: transparent;
 }
@@ -118,5 +123,5 @@ header div img{
 .load-more button:hover
 {
     cursor: pointer;
-    color:bisque;
+    color:red;
 }
