--- a/app/static/css/gimage.css
+++ b/app/static/css/gimage.css
@@ -11,10 +11,10 @@ body{
 }
 .upper h4
 {
-    color:white;
+    color:black;
+    font-weight: 600;
     text-align: center;
-    font-family: 'Noto Sans';
-    font-size: 2rem;
+    font-size: 3rem;
     margin: 1rem 0;
 }
 .upper .form-control
@@ -43,6 +43,8 @@ body{
     opacity: 0.8;
     color: black;
 }
+
+
 .main{
     display: flex;
     flex-direction: column;
@@ -58,15 +60,32 @@ header{
     max-width: 1000px;
     flex-direction: column;
     flex-flow: row wrap;
+    margin-bottom: 4rem;
 }
 
-.image{
+
+@media (min-width:300px){
+    .image{
     display: flex;
     flex: auto;
     width: 300px;
-    margin: 0.4vw 0.1vw;
+    /*margin: 0.4vw 0.1vw;*/
     flex-direction: column;
-    
+    margin: 0.5rem 1rem;
+}
+
+}
+
+@media (min-width:700px){
+    .image{
+    display: flex;
+    flex: auto;
+    width: 300px;
+    /*margin: 0.4vw 0.1vw;*/
+    flex-direction: column;
+    margin: 0.5rem 0.2rem;
+}
+
 }
 .info{
     display: flex;
@@ -106,22 +125,49 @@ header div img{
 
 .load-more{
     display: flex;
+    /*flex-direction: column;*/
     align-items: center;
-    justify-content: center;
+    box-shadow: 0 1px 20px 3px rgba(60,64,67,0.3), 0 2px 6px 2px rgba(60,64,67,0.15);
+    width: 100%;
+    z-index: 1000;
     margin: 1rem auto;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
+.load-more .form-control{
+    background-color: white;
+    margin: 0 auto;
+    margin-right: 0.2rem;
+    margin-left: auto;
+}
+
+.load-more .form-control .form{
+    padding: 0 0;
 }
 
 .load-more button
 {
+
+    margin: 0 0;
     font-size: 20px;
     box-sizing: border-box;
+    margin-left: 0;
+    margin-right: auto;
     color: black;
-    padding: 4px 6px;
-    background-color: transparent;
+    border: 2px solid black;
+    padding: 4px 8px;
+    background-color: white;
+}
+.load-more button:disabled{
+    color: rgb(128, 128, 128);
 }
 
 .load-more button:hover
 {
     cursor: pointer;
+    border-radius: 2.3rem;
     color:red;
 }
